# Anyone-pay

./: DATA_DROP_INTEGRATION.md  DEPLOY.md  DEPLOY_CONTRACT.md  LICENSE  README.md  SETUP.md  SUPABASE_DEPOSIT_TRACKING.md  SUPABASE_ENV_VARS.md  SUPABASE_SETUP.md  SUPABASE_SETUP_INSTRUCTIONS.md  env.template.txt  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  supabase-deposit-tracking.sql  supabase-setup.sql  tailwind.config.ts  test-execute-x402.sh  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/admin/services/: page.tsx
app/api/health/: route.ts
app/api/parse-intent/: route.ts
app/content/: page.tsx
app/receipt/: page.tsx
app/refund/: page.tsx
components/: AmbientBackground.tsx  CreateServiceModal.tsx  FloatingInput.tsx  IntentFlowDiagram.tsx  IntentsQR.tsx  ServicesList.tsx  WalletProvider.tsx
contract/: .gitignore  Cargo.toml  build.sh  deploy.sh  test-contract.sh  update-env.sh
contract/src/: lib.rs  main.rs
data-drop-contract/: Cargo.toml  README.md  build.sh  deploy.sh
data-drop-contract/src/: lib.rs
lib/: chainSig.ts  dataDrop.ts  depositTracking.ts  intentParser.ts  kdf.ts  near.ts  nearAI.ts  nearAccount.ts  oneClick.ts  serviceRegistry.test.ts  serviceRegistry.ts  session.ts  sessionStore.ts  supabase-server.ts  supabase.ts  wallet.ts
scripts/: README.md  run-cronjob.js  run-cronjob.sh  run-cronjob.ts  setup-supabase-manual.md  setup-supabase.ts  test-execute-x402.js  test-execute-x402.ts  test-sign-x402-transaction.js  validate-sql.ts
types/: bn.d.ts  chainsig.d.ts  keccak.d.ts  viem.d.ts
(+17 files in other folders)
